styles/small.css
:root {
    --h1-and-p-fonts: 'Fredoka', sans-serif;
    --body-background: #f5f5f5;
    --nav-background: #1C2833;
}


@media screen and (max-width: 767px) {

    /******** Background color & others **********/

    *,
    *::before,
    *::after {
        box-sizing: border-box;
    }

    body {
        background: #f5f5f5;
    }

    header {
        display: grid;
        grid-template-columns: 24px auto 44px;
        column-gap: .8rem;
        padding: 5px 0 0 10px;
        margin-left: 0;
        background: var(--nav-background);
    }

    .sticky-header {
        top: 0;
        position: sticky;
        z-index: 1;
    }

    #nav-bar {
        display: none;
    }


    header span {
        padding: 5px 0 10px 10px;
        color: #fff;
    }

    #nav-bar.show {
        display: flex;
        flex-direction: column;
        padding: 1rem 0 0 10px;
        margin: 0;
        width: 100vw;
        background-color: var(--nav-background);
    }

    #nav-bar.show a {
        display: block;
        border-bottom: solid 1px #fff;
        color: #fff;
        text-decoration: none;
        padding: 1rem 0;
    }

    #nav-bar.show a:visited {
        color: var(--nav-background);
    }

    #ham-btn {
        content: "\2630";
        border: none;
        background: none;
        color: #fff;
        padding: 5px 5px 10px;
        font-family: Verdana, Geneva, Tahoma, sans-serif;
        font-size: large;
        color: slategray;
    }

    .current-page {
        background: #fff;
    }

    h1,
    span,
    p,
    h2,
    button {
        font-family: var(--h1-and-p-fonts);
    }

    /**************** Content ************/
    h1,
    p {
        margin: 1.5rem 5px 1.5rem 10px;
    }

    h2 {
        text-align: center;
    }

    section h2 {
        padding: .5rem;
    }

    section img {
        display: block;
        overflow: hidden;
        width: 100%;
        height: auto;
        max-width: 300px;
        margin: 1rem auto;
        border-radius: 6px;
    }

    section p {
        padding: 1rem;
    }

    footer a>img {
        width: 100%;
        max-width: 50px;
        margin-left: 10px;
    }

    .social-platforms {
        display: flex;
        flex-direction: row;
        justify-content: center;
        border-top: solid 1px var(--nav-background);
        padding-top: 10px;
        background: #fff;
    }

    .course-buttons button {
        padding: .8rem;
        margin: 1rem 1rem 1rem 10px;
        width: 200px;
        color: var(--nav-background);
    }

    .course-buttons {
        display: flex;
        flex-direction: row;
        justify-content: center;
        gap: 1rem;
    }

    footer {
        color: #fff;
        padding: 10px 0 0;
        text-align: center;
    }

    footer p {
        margin: 0;
    }

    .footer-back {
        background: var(--nav-background);
        padding: .5rem 0 1rem;
    }

    .about-me>section {
        border: solid 1px var(--nav-background);
        margin: 1rem 1rem 1.5rem 10px;
    }

    #course-list {
        display: flex;
        flex-direction: column;
        margin: 1rem;
        text-align: center;
    }

    .all-courses,
    .cse-courses,
    .wdd-courses {
        padding: 1rem;
        background: var(--nav-background);
        margin: 1rem;
        color: #fff;
        border-radius: 8px;
    }

    .all-courses.completed::after,
    .cse-courses.completed::after,
    .wdd-courses.completed::after {
        content: "✔";
        color: green;
        font-weight: bold;
        margin-left: 5px;
    }

    .all-courses.incomplete::after,
    .cse-courses.incomplete::after,
    .wdd-courses.incomplete::after {
        content: "❌";
        color: red;
        font-weight: bold;
        margin-left: 5px;
    }


}

